--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <ul>
                                 <li>C Program</li>
                                     <li>Python</li>
-                                        <li>Html,Css</li>
+                                        <li>Html,Css,Javascript</li>
                             </ul>
                             <h2> Projects</h2>
                             <hr>
